--- a/sanpham-full.html
+++ b/sanpham-full.html
@@ -36,7 +36,6 @@
                 <span class="nav-icon">📦</span>
                 <span class="nav-text">Sản phẩm</span>
               </div>
-              <span class="nav-badge gray">128</span>
             </a>
 
             <a href="danhmuc-full.html" class="nav-item">
@@ -51,7 +50,6 @@
                 <span class="nav-icon">🏬</span>
                 <span class="nav-text">Tồn kho</span>
               </div>
-              <span class="nav-badge red">5</span>
             </a>
 
             <a href="#" class="nav-item">
@@ -59,7 +57,6 @@
                 <span class="nav-icon">🧾</span>
                 <span class="nav-text">Đơn hàng</span>
               </div>
-              <span class="nav-badge red">12</span>
             </a>
 
             <a href="khachhang-full.html" class="nav-item">
@@ -69,19 +66,12 @@
               </div>
             </a>
 
-            <a href="#" class="nav-item">
-              <div class="nav-left">
-                <span class="nav-icon">⭐</span>
-                <span class="nav-text">Đánh giá</span>
-              </div>
-              <span class="nav-badge gray">8</span>
-            </a>
           </nav>
 
           <!-- VẬN HÀNH -->
           <div class="sidebar-section-label">VẬN HÀNH</div>
           <nav class="sidebar-nav">
-            <a href="#" class="nav-item">
+            <a href="vanchuyen-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">🚚</span>
                 <span class="nav-text">Vận chuyển</span>
@@ -92,7 +82,6 @@
                 <span class="nav-icon">↩️</span>
                 <span class="nav-text">Hoàn tiền</span>
               </div>
-              <span class="nav-badge red">3</span>
             </a>
             <a href="khuyenmai-full.html" class="nav-item">
               <div class="nav-left">
@@ -117,12 +106,6 @@
                 <span class="nav-text">Báo cáo</span>
               </div>
             </a>
-            <a href="#" class="nav-item">
-              <div class="nav-left">
-                <span class="nav-icon">💳</span>
-                <span class="nav-text">Tài chính</span>
-              </div>
-            </a>
           </nav>
 
           <!-- THIẾT LẬP -->
@@ -138,12 +121,6 @@
               <div class="nav-left">
                 <span class="nav-icon">⚙️</span>
                 <span class="nav-text">Cài đặt</span>
-              </div>
-            </a>
-            <a href="#" class="nav-item">
-              <div class="nav-left">
-                <span class="nav-icon">❓</span>
-                <span class="nav-text">Hỗ trợ</span>
               </div>
             </a>
           </nav>
@@ -170,11 +147,15 @@
         <header class="topbar">
           <div class="topbar-left">
             <h1 class="page-title">Quản lý sản phẩm</h1>
+            <div class="search-box">
+              <span class="search-icon">🔍</span>
+              <input type="text" class="search-input" id="productSearch" placeholder="Tìm kiếm sản phẩm, mã SKU..." />
+            </div>
           </div>
           <div class="topbar-right">
             <button class="top-btn">🔔</button>
             <button class="top-btn">❓</button>
-            <button class="top-btn user-circle">A</button>
+            <button class="btn-store-open">Cửa hàng đang mở</button>
           </div>
         </header>
 
@@ -418,5 +399,7 @@
 
     <script src="js/scrip.js"></script>
     <script src="js/product-clean.js"></script>
+    <script src="js/user-info.js"></script>
+    <script src="js/sidebar-preserve.js"></script>
   </body>
 </html>
